--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,15 @@ __pycache__/
 .DS_Store
 
 # Логи
-logs/
-*.log
+#logs/
+#*.log
 
 # Конфигурационные файлы
 config.yaml
 
 # Результаты данных и временные файлы
-*.csv
-*.tmp
+#*.csv
+#*.tmp
 
 # Файлы виртуального окружения
 venv/
