--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+exceptiongroup==1.2.2
+iniconfig==2.1.0
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+pluggy==1.5.0
 py4j==0.10.9.7
 pyspark==3.5.5
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.2
+six==1.17.0
+tomli==2.2.1
+tzdata==2025.2
